# KoeAxis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat  webapp.py
benchmarks/: benchmark_results.csv  environment.txt  reproduction_commands.md  resume_audit.md
docs/: ARCHITECTURE.md  Align失败恢复Goal模式提示词.md  Align失败恢复既有能力审计TODO与验证计划.md  Goal模式完整任务提示词.md  PERFORMANCE_OPTIMIZATION.md  PIPELINE.md  STATUS.md  WEBUI.md  Web前后端整理Goal模式提示词.md  Web前后端整理TODO与验证计划.md  api-credentials.template.md  字幕流程完整改造计划与验收清单.md  项目文件与代码整理计划.md
optimizer/: __init__.py  alignment.py  asr_cleanup.py  asr_data.py  exceptions.py  fixed_terms.py  llm_client.py  llm_config.py  split_by_llm.py  splitter.py  splitter_boundaries.py  splitter_display.py  splitter_readability.py  splitter_timing.py  text_metrics.py  text_utils.py  timestamp_adapter.py  token_boundary_split.py  translator.py
qwen_asr/: __init__.py  align.py  alignment_state.py  artifact_state.py  asr.py  ass_quality.py  ass_quality_diff.py  audio.py  batch_runner.py  batching.py  cli.py  content_quality.py  corrector.py  credentials.py  defaults.py  final_quality.py  final_quality_alignment.py  final_quality_ass.py  final_quality_common.py  final_quality_content.py  final_quality_mimo.py  final_quality_postproofread.py  final_quality_readability.py  final_quality_realign.py  final_quality_srt.py  final_quality_stage.py  final_quality_translation.py  glossary.py  history_glossary.py  history_glossary_ass.py  history_glossary_matching.py  history_glossary_rules.py  logging_utils.py  mfa_candidates.py  (+39 more)
(+198 files in other folders)
